--- a/src/app/components/about-us/about-us.component.scss
+++ b/src/app/components/about-us/about-us.component.scss
@@ -23,14 +23,14 @@
         h2{
             font-size: 40px;
             font-weight: 400;
-            font-family: 'Noto Serif SC', serif;
+            font-family: 'Noto Serif JP', serif;
             line-height: 50px;
             margin-bottom: 50px;
         }
         h3{
             font-size: 24px;
             font-weight: 400;
-            font-family: 'Noto Serif SC', serif;
+            font-family: 'Noto Serif JP', serif;
             // line-height: 60px;
             margin-bottom: 20px;
             margin-top: 20px;
@@ -39,7 +39,7 @@
             line-height: 20px;
             font-size: 14px;
             font-weight: 400;
-            font-family: 'Noto Serif SC', serif;
+            font-family: 'Noto Sans JP', sans-serif;
             color: rgba(0,0,0,0.69);
             text-align: justify;
         }
@@ -53,7 +53,7 @@
         h3{
             font-size: 40px;
             font-weight: 400;
-            font-family: 'Noto Serif SC', serif;
+            font-family: 'Noto Serif JP', serif;
             line-height: 56px;
             margin-bottom: 16px;
         }
@@ -62,7 +62,7 @@
         p{
             font-size: 14px;
             font-weight: 400;
-            font-family: 'Noto Serif SC', serif;
+            font-family: 'Noto Sans JP', sans-serif;
             color: rgba(0,0,0,0.69);
             line-height: 20px;
             text-align: justify;
