--- a/src/app/components/blog/blog.component.scss
+++ b/src/app/components/blog/blog.component.scss
@@ -12,7 +12,7 @@
         padding-top: 100px;
         h1{
             font-weight: 400;
-            font-family: 'Noto Serif SC', serif;
+            font-family: 'Noto Serif JP', serif;
             font-size: 50px;
             line-height: 72px;
             span{
@@ -44,7 +44,7 @@
         h3{
             font-size: 20px;
             font-weight: 400;
-            font-family: 'Noto Serif SC', serif;
+            font-family: 'Noto Serif JP', serif;
             margin-bottom: 20px;
         }
         p{
@@ -52,14 +52,14 @@
             font-size: 14px;
             margin-bottom: 20px;
             font-weight: 400;
-            font-family: 'Noto Serif SC', serif;
+            font-family: 'Noto Sans JP', sans-serif;
             color: #6C6C6C;
             text-align: justify;
         }
         .btn{
             font-size: 12px;
             font-weight: 400;
-            font-family: 'Noto Serif SC', serif;
+            font-family: 'Noto Sans JP', sans-serif;
             color: #60D6C9;
             padding: 0;
         }
