--- a/src/app/components/cater/cater.component.scss
+++ b/src/app/components/cater/cater.component.scss
@@ -6,7 +6,7 @@
 .cater{
     margin-top: 100px;
     margin-bottom: 60px;
-    font-family: 'Noto Serif SC', serif;
+    font-family: 'Noto Sans JP', sans-serif;
     h1{
         font-size: 100px;
         font-weight: 400;
@@ -86,7 +86,7 @@
     padding-top: 50px;
     padding-bottom: 50px;
     background-color: #EFEFEF;
-    font-family: 'Noto Serif SC', serif;
+    font-family: 'Noto Sans JP', sans-serif;
     .row{
         margin-bottom: 40px;
     }
@@ -136,7 +136,7 @@
 .produce-dev{
     padding-top: 50px;
     padding-bottom: 50px;
-    font-family: 'Noto Serif SC', serif;
+    font-family: 'Noto Sans JP', sans-serif;
     h1{
         font-size: 34px;
         font-weight: 400;
@@ -185,7 +185,7 @@
     padding-top: 50px;
     padding-bottom: 50px;
     background-color: #F8F8F8;
-    font-family: 'Noto Serif SC', serif;
+    font-family: 'Noto Sans JP', sans-serif;
     .row{
         margin-bottom: 30px;
     }
@@ -244,7 +244,7 @@
 .mobile-apps{
     padding-top: 50px;
     padding-bottom: 50px;
-    font-family: 'Noto Serif SC', serif;
+    font-family: 'Noto Sans JP', sans-serif;
     .row{
         margin-bottom: 30px;
     }
@@ -274,7 +274,7 @@
     padding-top: 50px;
     //padding-bottom: 50px;
     background-color: #F8F8F8;
-    font-family: 'Noto Serif SC', serif;
+    font-family: 'Noto Sans JP', sans-serif;
     h1{
         font-size: 34px;
         font-weight: 400;
@@ -318,7 +318,7 @@
 .info-portals{
     padding-top: 50px;
     padding-bottom: 50px;
-    font-family: 'Noto Serif SC', serif;
+    font-family: 'Noto Sans JP', sans-serif;
     h1{
         font-size: 34px;
         font-weight: 400;
@@ -363,7 +363,7 @@
     padding-top: 50px;
     padding-bottom: 50px;
     background-color: #F7F7F7;
-    font-family: 'Noto Serif SC', serif;
+    font-family: 'Noto Serif JP', serif;
     h1{
         font-size: 34px;
         font-weight: 400;
