--- a/src/app/components/enquiry-footer/enquiry-footer.component.scss
+++ b/src/app/components/enquiry-footer/enquiry-footer.component.scss
@@ -10,7 +10,7 @@
     h5{
         font-size: 24px;
         font-weight: 400;
-        font-family: 'Noto Serif SC', serif;
+        font-family: 'Noto Serif JP', serif;
         text-align: left;
         margin-left: 10px;
         margin-bottom: 20px;
@@ -19,7 +19,7 @@
     h2{
         font-size: 24px;
         font-weight: 400;
-        font-family: 'Noto Serif SC', serif;
+        font-family: 'Noto Serif JP', serif;
         text-align: left;
         margin-left: 10px;
         margin-bottom: 30px;
@@ -45,7 +45,7 @@
         font-size: 14px;
         padding: 12px 36px;
         font-weight: 400;
-        font-family: 'Noto Serif SC', serif;
+        font-family: 'Noto Sans JP', sans-serif;
         background-color: #FDEE78;
         border-color: unset;
         margin-bottom: 28px;
@@ -64,7 +64,7 @@
         color: #8D8D8D;
         font-size: 14px;
         font-weight: 400;
-        font-family: 'Noto Serif SC', serif;
+        font-family: 'Noto Sans JP', sans-serif;
         }
     }
     .col-sm-4{
