--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -48,9 +48,7 @@
       <!-- <div class="col-md-1"></div> -->
       <div class="col-md-12">
       <div class="sample-text">
-        <h3>We bring</h3>
-        <h2>Digital Transformation & Innovation</h2>
-        <h3>through Design</h3>
+        <h2>We bring Digital Transformation & Innovation through Design</h2>
         <!-- <div class="rw-wrapper">
           <h2 class="rw-sentence">
             <div class="rw-words rw-words-1">
@@ -122,9 +120,9 @@
           <div class="col-md-4">
               <div class="service">
                 <div class="service-icon">
-                    <img src="/assets/images/home/icon-11.svg" alt="User Experience"/>
+                    <img src="/assets/images/home/icon-11.svg" alt="Digital Transformation"/>
                 </div>
-                <h4>DIGITAL TRANSFORMATION</h4>
+                <h4>Digital Transformation</h4>
                <!--  <p>We help clients transform their legacy system by reimagining their process to embrace continuous 
                   improvement and innovation to elevate customer experience.
                 </p> -->
@@ -134,9 +132,9 @@
           <div class="col-md-4">
             <div class="service">
                 <div class="service-icon">
-                  <img src="/assets/images/home/icon-66.svg" alt="Interface Design"/>
+                  <img src="/assets/images/home/icon-66.svg" alt="Product Developement"/>
                 </div>
-                 <h4>PRODUCT DEVELOPMENT</h4>
+                 <h4>Product Development</h4>
                <!-- <p>We help to bring a product live beginning from ideation to market launch. Our consultants can work 
                   as a true extension of internal business or development team to bring the product live.</p> -->
                 <!-- <a class="bttn">Show More</a> -->
@@ -145,9 +143,9 @@
         <div class="col-md-4">
           <div class="service">
             <div class="service-icon">
-              <img src="/assets/images/home/icon-55.svg" alt="UI Development" />
+              <img src="/assets/images/home/icon-55.svg" alt="Start-Ups" />
             </div>
-           <h4>START-UPS</h4>
+           <h4>Start-Ups</h4>
             <!--  <p>We've been there and we exactly know the struggles and what it takes to build a product from the scratch. 
               We have the expertise to validate your ideas with the right process and to bring the right solutions for 
               your target customers and ensure a successful launch.</p> -->
@@ -159,9 +157,9 @@
            <div class="col-md-4">
                 <div class="service">
                   <div class="service-icon">
-                    <img src="/assets/images/home/icon-44.svg" alt="End-to-End Development"/>
+                    <img src="/assets/images/home/icon-44.svg" alt="Mobile Apps"/>
                   </div>
-                  <h4>MOBILE APPS</h4>
+                  <h4>Mobile Apps</h4>
                   <!-- <p>With the need for constant updates and customer interaction the demand for mobile apps have increased multifold. 
                     Aligning with the Native Ecosystem is the key to design for Android & iOS which helps in easier adaptability. 
                     Our designers can churn the right features and engagement with the best of customer experience.</p> -->
@@ -171,9 +169,9 @@
           <div class="col-md-4">
             <div class="service">
               <div class="service-icon">
-                <img src="/assets/images/home/icon-22.svg" alt="Usablity Testing"/>
+                <img src="/assets/images/home/icon-22.svg" alt="Enterprise Applications"/>
               </div>
-              <h4>ENTERPRISE APPLICATIONS</h4>
+              <h4>Enterprise Applications</h4>
               <!-- <p>Its a huge decision when it comes to Enterprise Application Revamp. They can be complex and interwoven with multiple other systems. 
                 We exactly know how to align the customer demand and the customer experience and build a scalable, component based mission 
                 critical applications that form the back-bone of the business.
@@ -184,9 +182,9 @@
           <div class="col-md-4 redirect">
               <div class="service">
                 <div class="service-icon">
-                  <img src="/assets/images/home/icon-33.svg" alt="Training"/>
+                  <img src="/assets/images/home/icon-33.svg" alt="Information Portal"/>
                 </div>
-                <h4>INFORMATION PORTALS</h4>
+                <h4>Information Portal</h4>
                 <!-- <p>Build the face of your business that speaks of the product or service offered and acts as the 
                   gateway for your business transactions. We focus on customer engagement and conversion.</p> -->
                 <!-- <a class="bttn">Show More</a> -->
