--- a/src/app/components/our-team/our-team.component.scss
+++ b/src/app/components/our-team/our-team.component.scss
@@ -24,12 +24,12 @@ font-style: 'Roboto';
 h2{
     font-size: 24px;
     font-weight: 400;
-    font-family: 'Noto Serif SC', serif;
+    font-family: 'Noto Serif JP', serif;
 }
 h6{
     font-size: 14px;
     font-weight: 400;
-    font-family: 'Noto Serif SC', serif;
+    font-family: 'Noto Sans JP', sans-serif;
     line-height: 20px;
     margin-bottom: 22px;
     text-align: justify;
@@ -37,7 +37,7 @@ h6{
 p{
     font-size: 14px;
     font-weight: 400;
-    font-family: 'Noto Serif SC', serif;
+    font-family: 'Noto Sans JP', sans-serif;
     text-align:right;
 }
 .build-next-product-body {
@@ -58,7 +58,7 @@ p{
     span{
         color: #000000;
         font-weight: 400;
-        font-family: 'Noto Serif SC', serif;
+        font-family: 'Noto Sans JP', sans-serif;
     }
 }
 .container{
