--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -9,13 +9,13 @@
 h2{
     font-size: 50px;
     font-weight: 400;
-    font-family: 'Noto Serif SC', serif;
+    font-family: 'Noto Serif JP', serif;
     text-align: left;
     margin-bottom: 30px;
 }
 p{
     font-weight: 400;
-    font-family: 'Noto Serif SC', serif;
+    font-family: 'Noto Sans JP', sans-serif;
     font-size: 20px;
     text-align: justify;
 }
@@ -56,7 +56,7 @@ p{
     color: white;
     font-size: 20px;
     font-weight: 400;
-    font-family: 'Noto Serif SC', serif;
+    font-family: 'Noto Sans JP', sans-serif;
     padding: 10px;
     text-align: left;
 }
@@ -67,13 +67,13 @@ h4{
     color: #FFFFFF;
     font-size: 20px;
     font-weight: 400;
-    font-family: 'Noto Serif SC', serif;
+    font-family: 'Noto Serif JP', serif;
 }
 h6{
     color: #FFFFFF;
     font-size: 14px;
     font-weight: 400;
-    font-family: 'Noto Serif SC', serif;
+    font-family: 'Noto Serif JP', serif;
 }
 a{
     color: #fff;
@@ -89,7 +89,7 @@ a{
     h2{
         font-size: 30px;
         font-weight: 400;
-        font-family: 'Noto Serif SC', serif;
+        font-family: 'Noto Serif JP', serif;
         text-align: left;
         margin-bottom: 10px;
     }
