--- a/src/app/components/services/back-end-development/back-end-development.component.scss
+++ b/src/app/components/services/back-end-development/back-end-development.component.scss
@@ -5,7 +5,7 @@
 h1{
     font-size: 50px;
     font-weight: 400;
-    font-family: 'Noto Serif SC', serif;
+    font-family: 'Noto Serif JP', serif;
     text-align: left;
     margin-bottom: 10px;
     line-height: 60px;
@@ -13,7 +13,7 @@ h1{
 h5{
     font-size: 40px;
     font-weight: 400;
-    font-family: 'Noto Serif SC', serif;
+    font-family: 'Noto Serif JP', serif;
     text-align: left;
     margin-bottom: 20px;
 }
@@ -26,14 +26,14 @@ p{
     text-align: justify;
     margin-bottom: 30px;
     font-weight: 400;
-    font-family: 'Noto Serif SC', serif;
+    font-family: 'Noto Sans JP', sans-serif;
 }
 .service{
     cursor: pointer;
     // p{
     //     text-align: left;
     //     font-weight: 400;
-    //     font-family: 'Noto Serif SC', serif;
+    //     font-family: 'Noto Sans JP', sans-serif;
     //     color: #000;
     // }
     h4{
@@ -54,7 +54,7 @@ p{
     padding: 0;
     font-size: 12px;
     font-weight: 400;
-    font-family: 'Noto Serif SC', serif;
+    font-family: 'Noto Sans JP', sans-serif;
     cursor: pointer;
 }
 // .searvice-jumbotron{
@@ -118,7 +118,7 @@ p{
         font-size: 64px;
         text-align: center;
         font-weight: 400;
-        font-family: 'Noto Serif SC', serif;
+        font-family: 'Noto Serif JP', serif;
     }
     .step-image{
         background-image: url('/assets/images/services/end-to-end/line-4.svg');
@@ -130,7 +130,7 @@ p{
     p{
         font-size: 14px;
         font-weight: 400;
-        font-family: 'Noto Serif SC', serif;
+        font-family: 'Noto Sans JP', sans-serif;
         text-align: center;
         margin-top: 20px;
     }
@@ -144,7 +144,7 @@ p{
         span{
             font-size: 14px;
             font-weight: 400;
-            font-family: 'Noto Serif SC', serif;
+            font-family: 'Noto Serif JP', serif;
             margin-left: 10px;
         }
     }
@@ -155,7 +155,7 @@ p{
     .highlight1{
         font-size: 24px;
         font-weight: 400;
-        font-family: 'Noto Serif SC', serif;
+        font-family: 'Noto Serif JP', serif;
         text-align: left;
         line-height: 20px;
     }
@@ -217,7 +217,7 @@ p{
         color: #000000;
         font-size: 20px;
         font-weight: 400;
-        font-family: 'Noto Serif SC', serif;
+        font-family: 'Noto Serif JP', serif;
         margin-bottom: 20px;
         margin-top: 20px;
     }
@@ -280,7 +280,7 @@ p{
             font-size: 35px;
             font-weight: 400;
             text-align: left;
-            font-family: 'Noto Serif SC', serif;
+            font-family: 'Noto Serif JP', serif;
         }
         .step-image{
             width: 57%;
