--- a/src/app/components/services/front-end-development/development.component.scss
+++ b/src/app/components/services/front-end-development/development.component.scss
@@ -5,14 +5,14 @@
 h1{
     font-size: 50px;
     font-weight: 400;
-    font-family: 'Noto Serif SC', serif;
+    font-family: 'Noto Serif JP', serif;
     text-align: left;
     margin-bottom: 10px;
 }
 h5{
     font-size: 40px;
     font-weight: 400;
-    font-family: 'Noto Serif SC', serif;
+    font-family: 'Noto Serif JP', serif;
     text-align: left;
     margin-bottom: 10px;
 }
@@ -23,7 +23,7 @@ p{
     color: #797979;
     font-size: 14px;
     font-weight: 400;
-    font-family: 'Noto Serif SC', serif;
+    font-family: 'Noto Sans JP', sans-serif;
     text-align: justify;
     margin-bottom: 30px;
 }
@@ -32,7 +32,7 @@ p{
     // p{
     //     text-align: left;
     //     font-weight: 400;
-    //     font-family: 'Noto Serif SC', serif;
+    //     font-family: 'Noto Sans JP', sans-serif;
     //     color: #000;
     // }
     h4{
@@ -53,7 +53,7 @@ p{
     padding: 0;
     font-size: 12px;
     font-weight: 400;
-    font-family: 'Noto Serif SC', serif;
+    font-family: 'Noto Sans JP', sans-serif;
     cursor: pointer;
 }
 
@@ -64,7 +64,7 @@ p{
         font-size: 64px;
         font-weight: 400;
         text-align: center;
-        font-family: 'Noto Serif SC', serif;
+        font-family: 'Noto Serif JP', serif;
 }
     .step-image{
         background-image: url('/assets/images/services/ui-dev/line.svg');
@@ -76,7 +76,7 @@ p{
     p{
         font-size: 14px;
         font-weight: 400;
-        font-family: 'Noto Serif SC', serif;
+        font-family: 'Noto Sans JP', sans-serif;
         text-align: center;
         margin-top: 20px;
     }
@@ -90,7 +90,7 @@ p{
         span{
             font-size: 14px;
             font-weight: 400;
-            font-family: 'Noto Serif SC', serif;
+            font-family: 'Noto Serif JP', serif;
             margin-left: 10px;
         }
     }
@@ -102,7 +102,7 @@ p{
         span{
             font-size: 14px;
             font-weight: 400;
-            font-family: 'Noto Serif SC', serif;
+            font-family: 'Noto Sans JP', sans-serif;
             margin-left: 4px;
         }
     }
@@ -171,7 +171,7 @@ p{
     p{
         font-size: 14px;
         font-weight: 400;
-        font-family: 'Noto Serif SC', serif;
+        font-family: 'Noto Sans JP', sans-serif;
         text-align: left;
         margin-bottom: 28px;
         margin-top: 14px; 
@@ -227,7 +227,7 @@ p{
         color: #000000;
         font-size: 12px;
         font-weight: 400;
-        font-family: 'Noto Serif SC', serif;
+        font-family: 'Noto Sans JP', sans-serif;
         margin-bottom: 20px;
         margin-top: 20px;
     }
@@ -298,7 +298,7 @@ p{
             font-size: 35px;
             font-weight: 400;
             text-align: left;
-            font-family: 'Noto Serif SC', serif;
+            font-family: 'Noto Serif JP', serif;
         }
         .step-image{
             width: 60%;
