--- a/src/app/components/services/usability-testing/usability-testing.component.scss
+++ b/src/app/components/services/usability-testing/usability-testing.component.scss
@@ -5,14 +5,14 @@
 h1{
     font-size: 50px;
     font-weight: 400;
-    font-family: 'Noto Serif SC', serif;
+    font-family: 'Noto Serif JP', serif;
     text-align: left;
     margin-bottom: 10px;
 }
 h5{
     font-size: 40px;
     font-weight: 400;
-    font-family: 'Noto Serif SC', serif;
+    font-family: 'Noto Serif JP', serif;
     text-align: left;
     margin-bottom: 10px;
 }
@@ -23,7 +23,7 @@ p{
     color: #797979;
     font-size: 14px;
     font-weight: 400;
-    font-family: 'Noto Serif SC', serif;
+    font-family: 'Noto Sans JP', sans-serif;
     text-align: justify;
     margin-bottom: 30px;
 }
@@ -32,7 +32,7 @@ p{
     // p{
     //     text-align: left;
     //     font-weight: 400;
-    //     font-family: 'Noto Serif SC', serif;
+    //     font-family: 'Noto Serif JP', sans-serif;
     //     color: #000;
     // }
     h4{
@@ -53,7 +53,7 @@ p{
     padding: 0;
     font-size: 12px;
     font-weight: 400;
-    font-family: 'Noto Serif SC', serif;
+    font-family: 'Noto Sans JP', sans-serif;
     cursor: pointer;
 }
 .usability{
@@ -63,7 +63,7 @@ p{
         font-size: 64px;
         font-weight: 400;
         text-align: center;
-        font-family: 'Noto Serif SC', serif;
+        font-family: 'Noto Serif JP', serif;
     }
     .step-image{
         background-image: url('/assets/images/services/usability-testing/line-5.svg');
@@ -75,7 +75,7 @@ p{
     p{
         font-size: 14px;
         font-weight: 400;
-        font-family: 'Noto Serif SC', serif;
+        font-family: 'Noto Sans JP', sans-serif;
         text-align: center;
         margin-top: 20px;
     }
@@ -89,7 +89,7 @@ p{
         span{
             font-size: 14px;
             font-weight: 400;
-            font-family: 'Noto Serif SC', serif;
+            font-family: 'Noto Serif JP', sans-serif;
             margin-left: 10px;
         }
     }
@@ -101,14 +101,14 @@ p{
     h1{
         font-size: 40px;
         font-weight: 400;
-        font-family: 'Noto Serif SC', serif;
+        font-family: 'Noto Serif JP', serif;
         text-align: center;
         margin-bottom: 40px;
     }
     p{
         font-size: 14px;
         font-weight: 400;
-        font-family: 'Noto Serif SC', serif;
+        font-family: 'Noto Sans JP', sans-serif;
         text-align: center;
     }
 }
@@ -125,7 +125,7 @@ img{
 p{
     font-size: 14px;
     font-weight: 400;
-    font-family: 'Noto Serif SC', serif;
+    font-family: 'Noto Sans JP', sans-serif;
     text-align: center;
     margin-top: 10px;
 }
@@ -137,14 +137,14 @@ p{
     h1{
         font-size: 40px;
         font-weight: 400;
-        font-family: 'Noto Serif SC', serif;
+        font-family: 'Noto Serif JP', serif;
         margin-top: 100px;
         margin-bottom: 20px;
     }
     p{
         font-size: 14px;
         font-weight: 400;
-        font-family: 'Noto Serif SC', serif;
+        font-family: 'Noto Serif JP', serif;
     }
     img{
         width: 70%;
@@ -153,7 +153,7 @@ p{
     h3{
         font-size: 17px;
         font-weight: 400;
-        font-family: 'Noto Serif SC', serif;
+        font-family: 'Noto Serif JP', serif;
     }
 }
 
@@ -164,19 +164,19 @@ p{
     h1{
         font-size: 40px;
         font-weight: 400;
-        font-family: 'Noto Serif SC', serif;
+        font-family: 'Noto Serif JP', serif;
         margin-bottom: 40px;
     }
     h3{
         color: #6C6C6C;
         font-size: 18px;
         font-weight: 400;
-        font-family: 'Noto Serif SC', serif;
+        font-family: 'Noto Serif JP', serif;
     }
     p{
         font-size: 14px;
         font-weight: 400;
-        font-family: 'Noto Serif SC', serif;
+        font-family: 'Noto Sans JP', sans-serif;
         margin-bottom: 0;
     }
     img{
@@ -254,7 +254,7 @@ p{
     h1{
         font-size: 40px;
         font-weight: 400;
-        font-family: 'Noto Serif SC', serif;
+        font-family: 'Noto Serif JP', serif;
         text-align: center;
     }
     h5{
@@ -265,14 +265,14 @@ p{
     h4{
         font-size: 40px;
         font-weight: 400;
-        font-family: 'Noto Serif SC', serif;
+        font-family: 'Noto Serif JP', serif;
         text-align: left;
         margin-bottom: 10px;
     }
     .highlight{
         font-size: 40px;
         font-weight: 400;
-        font-family: 'Noto Serif SC', serif;
+        font-family: 'Noto Serif JP', serif;
         text-align: left;
         margin-bottom: 10px;
     }
@@ -319,7 +319,7 @@ p{
             font-size: 34px;
             font-weight: 400;
             text-align: left;
-            font-family: 'Noto Serif SC', serif;
+            font-family: 'Noto Serif JP', serif;
         }
         .step-image{
             width: 60%;
