--- a/src/scss/bootstrap-custom.scss
+++ b/src/scss/bootstrap-custom.scss
@@ -1,5 +1,5 @@
 @import './colors';
-$font-family-sans-serif: 'Roboto', sans-serif;
+$font-family-sans-serif: 'Noto Sans JP', sans-serif;
 $headings-font-weight: 700;
 $link-color: $dark;
 
