--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -99,7 +99,7 @@ header{
     //         text-align: center;
     //         margin-top: 30px;
     //         font-weight: 400;
-    //         font-family: 'Noto Serif SC', serif;
+    //         font-family: 'Noto Serif JP', serif;
     //     }
     // }
     .nav-item{
@@ -109,7 +109,7 @@ header{
             padding: 23px 14px;
             font-size: 14px;
             font-weight: 400;
-            font-family: 'Noto Serif SC', serif;
+            font-family: 'Noto Sans JP', sans-serif;
             color: #A8A8A8;
             span{
                 position: relative;
@@ -178,7 +178,7 @@ header{
             opacity: 1;
             font-size: 14px;
             font-weight: 400;
-            font-family: 'Noto Serif SC', serif;
+            font-family: 'Noto Sans JP', sans-serif;
             line-height: 20px;
             &:hover{
                 text-decoration: none;
@@ -208,7 +208,7 @@ footer{
     color: #8D8D8D;
     font-size: 14px;
     font-weight: 400;
-    font-family: 'Noto Serif SC', serif;
+    font-family: 'Noto Sans JP', sans-serif;
     a{
         color: #8D8D8D;
     }
