--- a/src/app/components/services/visual-design/visual-design.component.scss
+++ b/src/app/components/services/visual-design/visual-design.component.scss
@@ -11,13 +11,13 @@
 h5{
     font-size: 40px;
     font-weight: 400;
-    font-family: 'Noto Serif SC', serif;
+    font-family: 'Noto Serif JP', serif;
 }
 .btn{
     padding: 0;
     font-size: 12px;
     font-weight: 400;
-    font-family: 'Noto Serif SC', serif;
+    font-family: 'Noto Sans JP', sans-serif;
     cursor: pointer;
 }
 .service{
@@ -25,7 +25,7 @@ h5{
     // p{
     //     text-align: left;
     //     font-weight: 400;
-    //     font-family: 'Noto Serif SC', serif;
+    //     font-family: 'Noto Serif JP', serif;
     //     color: #000;
     // }
     h4{
@@ -49,7 +49,7 @@ h5{
         font-size: 64px;
         font-weight: 400;
         text-align: center;
-        font-family: 'Noto Serif SC', serif;
+        font-family: 'Noto Serif JP', serif;
     }
     .step-image{
         background-image: url('/assets/images/services/interface-design/line-2.svg');
@@ -61,7 +61,7 @@ h5{
     p{
         font-size: 14px;
         font-weight: 400;
-        font-family: 'Noto Serif SC', serif;
+        font-family: 'Noto Sans JP', sans-serif;
         text-align: center;
         margin-top: 20px;
     }
@@ -75,7 +75,7 @@ h5{
         p{
             font-size: 14px;
             font-weight: 400;
-            font-family: 'Noto Serif SC', serif;
+            font-family: 'Noto Sans JP', sans-serif;
             margin-top: 10px;
             text-align: center;
         }
@@ -143,7 +143,7 @@ h5{
         color:#6C6C6C;
         font-size: 20px;
         font-weight: 400;
-        font-family: 'Noto Serif SC', serif;
+        font-family: 'Noto Serif JP', serif;
         margin-bottom:22px;
     }
     h5{
@@ -155,14 +155,14 @@ h5{
         color: #6C6C6C;
         font-size: 14px;
         font-weight: 400;
-        font-family: 'Noto Serif SC', serif;
+        font-family: 'Noto Sans JP', sans-serif;
         margin-bottom: 30px; 
     }
     p{
         color: #797979;
         font-size: 14px;
         font-weight: 400;
-        font-family: 'Noto Serif SC', serif;
+        font-family: 'Noto Sans JP', sans-serif;
         text-align: justify;
         margin-bottom: 30px;
     }
@@ -182,7 +182,7 @@ h5{
         //color: #FFFFFF;
         font-size: 14px;
         font-weight: 400;
-        font-family: 'Noto Serif SC', serif;
+        font-family: 'Noto Sans JP', sans-serif;
         text-align: justify;
         margin-bottom: 20px;
     }
@@ -214,7 +214,7 @@ h5{
     p{
         font-size: 14px;
         font-weight: 400;
-        font-family: 'Noto Serif SC', serif;
+        font-family: 'Noto Sans JP', sans-serif;
         text-align: justify;
         margin-bottom: 30px;
     }
@@ -286,13 +286,13 @@ h5{
         color: #FFFFFF;
         margin-top: 50px;
         font-weight: 400;
-        font-family: 'Noto Serif SC', serif;
+        font-family: 'Noto Serif JP', serif;
     }
     p{
         color: #FFFFFF;
         font-size: 14px;
         font-weight: 400;
-        font-family: 'Noto Serif SC', serif;
+        font-family: 'Noto Sans JP', sans-serif;
         text-align: justify;
         margin-bottom: 20px;
     }
@@ -312,7 +312,7 @@ h5{
     p{
         font-size: 14px;
         font-weight: 400;
-        font-family: 'Noto Serif SC', serif;
+        font-family: 'Noto Sans JP', sans-serif;
         text-align: justify;
         margin-bottom: 30px;
     }
@@ -326,12 +326,12 @@ h5{
         margin-top: 50px;
         //color: #2D2D76;
         font-weight: 400;
-        font-family: 'Noto Serif SC', serif;
+        font-family: 'Noto Serif JP', serif;
     }
     p{
         font-size: 14px;
         font-weight: 400;
-        font-family: 'Noto Serif SC', serif;
+        font-family: 'Noto Sans JP', sans-serif;
         text-align: justify;
         margin-bottom: 20px;
     }
@@ -356,12 +356,12 @@ h5{
         margin-top: 50px;
         //color: #404040;
         font-weight: 400;
-        font-family: 'Noto Serif SC', serif;
+        font-family: 'Noto Serif JP', serif;
     }
     p{
         font-size: 14px;
         font-weight: 400;
-        font-family: 'Noto Serif SC', serif;
+        font-family: 'Noto Sans JP', sans-serif;
         text-align: justify;
         margin-bottom: 20px;
     }
@@ -382,7 +382,7 @@ h5{
         //color: #FFFFFF;
         margin-top: 50px;
         font-weight: 400;
-        font-family: 'Noto Serif SC', serif;
+        font-family: 'Noto Serif JP', serif;
     }
     .image-align{
         text-align: center;
@@ -404,7 +404,7 @@ h5{
         //color: #FFFFFF;
         font-size: 14px;
         font-weight: 400;
-        font-family: 'Noto Serif SC', serif;
+        font-family: 'Noto Sans JP', sans-serif;
         text-align: justify;
         margin-bottom: 30px;
     }
@@ -422,7 +422,7 @@ h5{
             font-size: 35px;
             font-weight: 400;
             text-align: left;
-            font-family: 'Noto Serif SC', serif;
+            font-family: 'Noto Serif JP', serif;
         }
         .step-image{
             width: 60%;
